[package]
name = "wld"
version = "0.1.0"
authors = ["Christopher Hiller <boneskull@boneskull.com>"]
edition = "2018"

[dependencies]
uuid = "0.8.1"
scroll = { version = "0.10.1", features = ["derive", "std"] }
nano-leb128 = { version = "0.1.0", features = ["std"] }
bitvec = "0.17.2"
num-derive = "0.3.0"
num-traits = "0.2.11"
derive_more = "0.99.2"
imageproc = "0.19.2"
image = "0.23.0"
lazy_static = "1.4.0"
maplit = "1.0.2"

[dev-dependencies]
insta = "0.13.1"
