[package]
name = "wld"
version = "0.1.0"
authors = ["Christopher Hiller <boneskull@boneskull.com>"]
edition = "2018"

[dependencies]
uuid = "0.8.1"
scroll = { version = "0.10.1", features = ["derive"] }
nano-leb128 = "0.1.0"
bitvec = "0.17.2"
num-derive = "0.3.0"
num-traits = "0.2.11"
derive_more = "0.99.2"
imageproc = "0.19.2"
image = "0.22.2"
lazy_static = "1.4.0"
fnv = "1.0.6"
memmap = "0.7.0"
scroll_derive = "0.10.1"

[dev-dependencies]
insta = "0.13.1"
